<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Katakana_Characters_Activity"
    android:background="@color/black">

    <TextView
        android:id="@+id/KatakanaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/KatakanaCharactersActivityWelcomeString"
        android:textAlignment="center"
        android:textColor="@color/TextColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/BackOneMenuButton"
        android:layout_width="80dp"
        android:layout_height="69dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/KatakanaTextView"
        android:text="@string/GoBackButtonString"
        android:textSize="32sp"
        android:textColor="@color/ButtonTextColor"
        android:backgroundTint="@color/ButtonBackgroundColor"
        android:gravity="center"
        android:textScaleX="2.5"/>


    <Button
        android:id="@+id/KatakanaCharactersAlphMultButton"
        android:layout_width="375sp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/ButtonBackgroundColor"
        android:gravity="center"
        android:text="@string/AlphabeticalOrderMultipleChoiceButtonString"
        android:textAllCaps="false"
        android:textColor="@color/ButtonTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BackOneMenuButton" />

    <Button
        android:id="@+id/KatakanaCharactersAlphFreeButton"
        android:layout_width="375sp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/ButtonBackgroundColor"
        android:gravity="center"
        android:text="@string/AlphabeticalOrderFreeChoiceButtonString"
        android:textAllCaps="false"
        android:textColor="@color/ButtonTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KatakanaCharactersAlphMultButton" />

    <Button
        android:id="@+id/KatakanaCharactersRandMultButton"
        android:layout_width="375dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/ButtonBackgroundColor"
        android:gravity="center"
        android:text="@string/RandomOrderMultipleChoiceButtonString"
        android:textAllCaps="false"
        android:textColor="@color/ButtonTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KatakanaCharactersAlphFreeButton" />

    <Button
        android:id="@+id/KatakanaCharactersRandFreeButton"
        android:layout_width="375dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/ButtonBackgroundColor"
        android:gravity="center"
        android:text="@string/RandomOrderFreeChoiceButtonString"
        android:textAllCaps="false"
        android:textColor="@color/ButtonTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KatakanaCharactersRandMultButton" />

</androidx.constraintlayout.widget.ConstraintLayout>