<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Kanji_Activity"
    android:background="@color/black">

    <TextView
        android:id="@+id/KanjiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/KanjiActivityWelcomeString"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/TextColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/BackOneMenuButton"
        android:layout_width="80dp"
        android:layout_height="69dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/KanjiTextView"
        android:text="@string/GoBackButtonString"
        android:textSize="32sp"
        android:textColor="@color/ButtonTextColor"
        android:backgroundTint="@color/ButtonBackgroundColor"
        android:gravity="center"
        android:textScaleX="2.5"/>

    <Button
        android:id="@+id/KanjiNumbersButton"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:textSize="22sp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/ButtonBackgroundColor"
        android:gravity="center"
        android:text="@string/NumbersActivityButtonString"
        android:textAllCaps="false"
        android:textColor="@color/ButtonTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BackOneMenuButton" />

    <Button
        android:id="@+id/KanjiTimeButton"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:textSize="22sp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/ButtonBackgroundColor"
        android:gravity="center"
        android:text="@string/TimeActivityButtonString"
        android:textAllCaps="false"
        android:textColor="@color/ButtonTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KanjiNumbersButton" />

</androidx.constraintlayout.widget.ConstraintLayout>