<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Hiragana_RandMult_Activity"
    android:background="@color/black">

    <TextView
        android:id="@+id/HiraganaRandMultDisplayChar"
        android:layout_width="350sp"
        android:layout_height="175dp"
        android:layout_marginTop="120sp"
        android:background="@color/CharacterLabelBackgroundColor"
        android:gravity="center"
        android:text="@string/MultipleChoiceActivityLabelHolder"
        android:textColor="@color/CharacterLabelColor"
        android:textSize="140sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/HiraganaRandMultDisplayCorrectNumber"
        android:layout_width="125sp"
        android:layout_height="50sp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/CorrectNumberText"
        android:textColor="@color/CorrectAnswerColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/HiraganaRandMultDisplayWrongNumber"
        android:layout_width="125sp"
        android:layout_height="50sp"
        android:layout_marginTop="70dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/WrongNumberText"
        android:textColor="@color/WrongAnswerColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/HiraganaRandMultDisplayCorrectNumberValue"
        android:layout_width="80sp"
        android:layout_height="50sp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="100"
        android:textColor="@color/CorrectAnswerColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/HiraganaRandMultDisplayWrongNumberValue"
        android:layout_width="80sp"
        android:layout_height="50sp"
        android:layout_marginTop="70dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="100"
        android:textColor="@color/WrongAnswerColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BackOneMenuButton"
        android:layout_width="80dp"
        android:layout_height="69dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/ButtonBackgroundColor"
        android:gravity="center"
        android:text="@string/GoBackButtonString"
        android:textColor="@color/ButtonTextColor"
        android:textScaleX="2.5"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/HiraganaRandMultButtonTopLeft"
        android:layout_width="150sp"
        android:layout_height="65sp"
        android:layout_marginTop="18dp"
        android:backgroundTint="@color/ButtonBackgroundColor"
        android:gravity="center"
        android:onClick="checkAnswerOnClick"
        android:text="@string/MultipleChoiceActivityTopLeftLabelHolder"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/AnswerChoiceColor"
        android:textSize="35sp"
        app:layout_constraintHorizontal_bias="0.10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HiraganaRandMultDisplayChar" />

    <Button
        android:id="@+id/HiraganaRandMultButtonTopRight"
        android:layout_width="150sp"
        android:layout_height="65sp"
        android:layout_marginTop="18dp"
        android:backgroundTint="@color/ButtonBackgroundColor"
        android:gravity="center"
        android:onClick="checkAnswerOnClick"
        android:text="@string/MultipleChoiceActivityTopRightLabelHolder"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/AnswerChoiceColor"
        android:textSize="35sp"
        app:layout_constraintHorizontal_bias="0.90"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HiraganaRandMultDisplayChar" />

    <Button
        android:id="@+id/HiraganaRandMultButtonBottomLeft"
        android:layout_width="150sp"
        android:layout_height="65sp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/ButtonBackgroundColor"
        android:gravity="center"
        android:onClick="checkAnswerOnClick"
        android:text="@string/MultipleChoiceActivityBottomLeftLabelHolder"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/AnswerChoiceColor"
        android:textSize="35sp"
        app:layout_constraintHorizontal_bias="0.10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HiraganaRandMultButtonTopLeft" />

    <Button
        android:id="@+id/HiraganaRandMultButtonBottomRight"
        android:layout_width="150sp"
        android:layout_height="65sp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/ButtonBackgroundColor"
        android:gravity="center"
        android:onClick="checkAnswerOnClick"
        android:text="@string/MultipleChoiceActivityBottomRightLabelHolder"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/AnswerChoiceColor"
        android:textSize="35sp"
        app:layout_constraintHorizontal_bias="0.90"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HiraganaRandMultButtonTopRight" />

    <TextView
        android:id="@+id/CorrectOrWrongText"
        android:layout_width="158dp"
        android:layout_height="50dp"
        android:layout_marginTop="468dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/CorrectOrWrongText"
        android:textColor="@color/CorrectAnswerColor"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ContinueButton"
        android:layout_width="185sp"
        android:layout_height="60sp"
        android:layout_marginTop="445dp"
        android:backgroundTint="@color/ButtonBackgroundColor"
        android:gravity="center"
        android:onClick="continueButtonClick"
        android:text="@string/ContinueButtonText"
        android:textColor="@color/ButtonTextColor"
        android:textSize="25sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/HiraganaRandMultDisplayCorrectNumber"
        app:layout_constraintVertical_bias="0.555" />
</androidx.constraintlayout.widget.ConstraintLayout>